feat: Added edit, etcupdate and export to swagger, openapi.
